dot added and wordbreak fixed on mobile

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -112,6 +112,11 @@
     margin: 100px 0;
   }
 
+  /* Prevents word breaking */
+  .testimonial .text {
+    word-break: keep-all;
+  }
+
   .swiper {
     width: 300px;
     height: 600px;
